Fixed SMAP generation with enclose